<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.david.androidbasicsquizapp.MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/quiz_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/quiz_title"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/quiz_subtitle"
                android:textSize="12sp" />

            <!-- Questions start here -->
            <!-- Q1. Kimchi -->
            <LinearLayout
                android:id="@+id/question1"
                style="@style/QuestionLayout">

                <TextView
                    style="@style/QuestionTextStyle"
                    android:text="@string/q1q" />

                <ImageView
                    android:id="@+id/kimchi_photo"
                    style="@style/FoodPhoto"
                    android:contentDescription="@string/picture_of_korean_food"
                    android:src="@drawable/kimchi" />

                <RadioGroup
                    android:id="@+id/kimchi_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/q1a1"
                        style="@style/AnswerRadioButtonStyle"
                        android:text="@string/q1a1" />

                    <RadioButton
                        android:id="@+id/q1a2"
                        style="@style/AnswerRadioButtonStyle"
                        android:text="@string/q1a2" />

                    <RadioButton
                        android:id="@+id/q1a3"
                        style="@style/AnswerRadioButtonStyle"
                        android:text="@string/q1a3" />

                    <RadioButton
                        android:id="@+id/q1a4"
                        style="@style/AnswerRadioButtonStyle"
                        android:text="@string/q1a4" />
                </RadioGroup>

                <TextView
                    android:id="@+id/kimchi_hint"
                    style="@style/AnswerTextStyle"
                    android:text="@string/q1hint" />

            </LinearLayout>

            <!-- Q2. Bulgogi -->
            <LinearLayout
                android:id="@+id/question2"
                style="@style/QuestionLayout">

                <TextView
                    style="@style/QuestionTextStyle"
                    android:text="@string/q2q" />

                <ImageView
                    style="@style/FoodPhoto"
                    android:contentDescription="@string/picture_of_korean_food"
                    android:src="@drawable/bulgogi" />

                <RadioGroup
                    android:id="@+id/bulgogi_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/q2a1"
                        style="@style/AnswerRadioButtonStyle"
                        android:text="@string/q2a1" />

                    <RadioButton
                        android:id="@+id/q2a2"
                        style="@style/AnswerRadioButtonStyle"
                        android:text="@string/q2a2" />

                    <RadioButton
                        android:id="@+id/q2a3"
                        style="@style/AnswerRadioButtonStyle"
                        android:text="@string/q2a3" />

                    <RadioButton
                        android:id="@+id/q2a4"
                        style="@style/AnswerRadioButtonStyle"
                        android:text="@string/q2a4" />
                </RadioGroup>

                <TextView
                    android:id="@+id/q2hint"
                    style="@style/AnswerTextStyle"
                    android:text="@string/q2hint" />

            </LinearLayout>

            <!-- Q3. Bibimbap -->
            <LinearLayout
                android:id="@+id/question3"
                style="@style/QuestionLayout">

                <TextView
                    style="@style/QuestionTextStyle"
                    android:text="@string/q3q" />

                <ImageView
                    style="@style/FoodPhoto"
                    android:contentDescription="@string/picture_of_korean_food"
                    android:src="@drawable/bibimbap" />

                <RadioGroup
                    android:id="@+id/bibimbap_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/q3a1"
                        style="@style/AnswerRadioButtonStyle"
                        android:text="@string/q3a1" />

                    <RadioButton
                        android:id="@+id/q3a2"
                        style="@style/AnswerRadioButtonStyle"
                        android:text="@string/q3a2" />

                    <RadioButton
                        android:id="@+id/q3a3"
                        style="@style/AnswerRadioButtonStyle"
                        android:text="@string/q3a3" />

                    <RadioButton
                        android:id="@+id/q3a4"
                        style="@style/AnswerRadioButtonStyle"
                        android:text="@string/q3a4" />
                </RadioGroup>

                <TextView
                    android:id="@+id/bibimbap_hint"
                    style="@style/AnswerTextStyle"
                    android:text="@string/q3hint" />

            </LinearLayout>

            <!-- Q4. Kimbap -->
            <LinearLayout
                android:id="@+id/question4"
                style="@style/QuestionLayout">

                <TextView
                    style="@style/QuestionTextStyle"
                    android:text="@string/q4q" />

                <ImageView
                    style="@style/FoodPhoto"
                    android:contentDescription="@string/picture_of_korean_food"
                    android:src="@drawable/gimbap" />

                <RadioGroup
                    android:id="@+id/kimbap_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/q4a1"
                        style="@style/AnswerRadioButtonStyle"
                        android:text="@string/q4a1" />

                    <RadioButton
                        android:id="@+id/q4a2"
                        style="@style/AnswerRadioButtonStyle"
                        android:text="@string/q4a2" />

                    <RadioButton
                        android:id="@+id/q4a3"
                        style="@style/AnswerRadioButtonStyle"
                        android:text="@string/q4a3" />

                    <RadioButton
                        android:id="@+id/q4a4"
                        style="@style/AnswerRadioButtonStyle"
                        android:text="@string/q4a4" />
                </RadioGroup>

                <TextView
                    android:id="@+id/kimbap_hint"
                    style="@style/AnswerTextStyle"
                    android:text="@string/q4hint" />

            </LinearLayout>

            <!-- Q5. Ramyeon -->
            <LinearLayout
                android:id="@+id/question5"
                style="@style/QuestionLayout">

                <TextView
                    style="@style/QuestionTextStyle"
                    android:text="@string/q5q" />

                <ImageView
                    style="@style/FoodPhoto"
                    android:contentDescription="@string/picture_of_korean_food"
                    android:src="@drawable/ramyeon" />

                <RadioGroup
                    android:id="@+id/ramyeon_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/q5a1"
                        style="@style/AnswerRadioButtonStyle"
                        android:text="@string/q5a1" />

                    <RadioButton
                        android:id="@+id/q5a2"
                        style="@style/AnswerRadioButtonStyle"
                        android:text="@string/q5a2" />

                    <RadioButton
                        android:id="@+id/q5a3"
                        style="@style/AnswerRadioButtonStyle"
                        android:text="@string/q5a3" />

                    <RadioButton
                        android:id="@+id/q5a4"
                        style="@style/AnswerRadioButtonStyle"
                        android:text="@string/q5a4" />
                </RadioGroup>

                <TextView
                    android:id="@+id/ramyeon_hint"
                    style="@style/AnswerTextStyle"
                    android:text="@string/q5hint" />

            </LinearLayout>

            <!-- Q6. Table -->
            <LinearLayout
                android:id="@+id/question6"
                style="@style/QuestionLayout">

                <TextView
                    style="@style/QuestionTextStyle"
                    android:text="@string/q6q" />

                <ImageView
                    style="@style/FoodPhoto"
                    android:contentDescription="@string/picture_of_korean_food"
                    android:src="@drawable/table" />

                <CheckBox
                    android:id="@+id/table_1"
                    style="@style/AnswerCheckBoxStyle"
                    android:text="@string/q6a1" />

                <CheckBox
                    android:id="@+id/table_2"
                    style="@style/AnswerCheckBoxStyle"
                    android:text="@string/q6a2" />

                <CheckBox
                    android:id="@+id/table_3"
                    style="@style/AnswerCheckBoxStyle"
                    android:text="@string/q6a3" />

                <CheckBox
                    android:id="@+id/table_4"
                    style="@style/AnswerCheckBoxStyle"
                    android:text="@string/q6a4" />

                <CheckBox
                    android:id="@+id/table_5"
                    style="@style/AnswerCheckBoxStyle"
                    android:text="@string/q6a5" />

                <TextView
                    android:id="@+id/table_hint"
                    style="@style/AnswerTextStyle"
                    android:text="@string/q6hint" />


            </LinearLayout>

            <!-- Q7. Kimchi Jeon -->
            <LinearLayout
                android:id="@+id/question7"
                style="@style/QuestionLayout">

                <TextView
                    style="@style/QuestionTextStyle"
                    android:text="@string/q7q" />


                <ImageView
                    style="@style/FoodPhoto"
                    android:contentDescription="@string/picture_of_korean_food"
                    android:src="@drawable/jeon" />

                <RadioGroup
                    android:id="@+id/jeon_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/q7a1"
                        style="@style/AnswerRadioButtonStyle"
                        android:text="@string/q7a1" />

                    <RadioButton
                        android:id="@+id/q7a2"
                        style="@style/AnswerRadioButtonStyle"
                        android:text="@string/q7a2" />

                    <RadioButton
                        android:id="@+id/q7a3"
                        style="@style/AnswerRadioButtonStyle"
                        android:text="@string/q7a3" />

                    <RadioButton
                        android:id="@+id/q7a4"
                        style="@style/AnswerRadioButtonStyle"
                        android:text="@string/q7a4" />
                </RadioGroup>

                <TextView
                    android:id="@+id/jeon_hint"
                    style="@style/AnswerTextStyle"
                    android:text="@string/q7hint" />
            </LinearLayout>

            <!-- Q8. Sangchu -->
            <LinearLayout
                android:id="@+id/question8"
                style="@style/QuestionLayout">

                <TextView
                    style="@style/QuestionTextStyle"
                    android:text="@string/q8q" />

                <ImageView
                    style="@style/FoodPhoto"
                    android:contentDescription="@string/picture_of_korean_food"
                    android:src="@drawable/sangchu" />

                <CheckBox
                    android:id="@+id/sangchu_1"
                    style="@style/AnswerCheckBoxStyle"
                    android:text="@string/q8a1" />

                <CheckBox
                    android:id="@+id/sangchu_2"
                    style="@style/AnswerCheckBoxStyle"
                    android:text="@string/q8a2" />

                <CheckBox
                    android:id="@+id/sangchu_3"
                    style="@style/AnswerCheckBoxStyle"
                    android:text="@string/q8a3" />

                <CheckBox
                    android:id="@+id/sangchu_4"
                    style="@style/AnswerCheckBoxStyle"
                    android:text="@string/q8a4" />

                <TextView
                    android:id="@+id/sangchu_hint"
                    style="@style/AnswerTextStyle"
                    android:text="@string/q8hint" />

            </LinearLayout>

            <!-- Q9. Gochu -->
            <LinearLayout
                android:id="@+id/question9"
                style="@style/QuestionLayout">

                <TextView
                    style="@style/QuestionTextStyle"
                    android:text="@string/q9preq" />

                <TextView
                    style="@style/QuestionTextStyle"
                    android:text="@string/q9q" />

                <ImageView
                    style="@style/FoodPhoto"
                    android:contentDescription="@string/picture_of_korean_food"
                    android:src="@drawable/gochu" />

                <EditText
                    android:id="@+id/gochu_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/q9prompt"
                    android:text="" />

                <TextView
                    android:id="@+id/gochu_hint"
                    style="@style/AnswerTextStyle"
                    android:text="@string/q9hint" />

            </LinearLayout>

            <!-- Q10. Thanks for the meal -->
            <LinearLayout
                android:id="@+id/question10"
                style="@style/QuestionLayout">

                <TextView
                    style="@style/QuestionTextStyle"
                    android:text="@string/q10q" />

                <EditText
                    android:id="@+id/meal_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/q10prompt"
                    android:text="" />

                <TextView
                    android:id="@+id/meal_hint"
                    style="@style/AnswerTextStyle"
                    android:text="@string/q10hint" />

            </LinearLayout>

            <!-- Submit button -->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="checkAnswers"
                android:text="@string/check_button"
                android:textAllCaps="true" />

            <!-- Results -->
            <TextView
                android:id="@+id/final_dont_worry"
                style="@style/QuestionAndAnswerTextStyle"
                android:text="@string/low_score_message"
                android:textSize="16sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/final_good_start"
                style="@style/QuestionAndAnswerTextStyle"
                android:text="@string/medium_score_message"
                android:textSize="16sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/final_great_job"
                style="@style/QuestionAndAnswerTextStyle"
                android:text="@string/high_score_message"
                android:textSize="16sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/final_score"
                style="@style/QuestionAndAnswerTextStyle"
                android:text="@string/final_score"
                android:textSize="20sp"
                android:visibility="gone" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="tryAgain"
                android:text="@string/try_again"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16sp"
                android:layout_marginTop="16sp"
                android:text="@string/credit_message"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
